# LSS

./: BigInt.h  CMakeLists.txt  README.md  a.out  list.txt  main.c  mode  output.txt
Results/: Addition_only_solutions.csv  Addition_only_solutions.txt  List_of_add_only_solutions.txt  List_of_addition_solutions.txt  List_of_no_solutions.txt  List_of_primitive_solutions.txt  no_solutions.txt  primitive_addition_solutions.csv  primitive_addition_solutions.txt  primitive_solutions.csv  solutions_for_positive_numbers.txt  trivial_solutions.csv  trivial_solutions.txt
Solutions/: no_solutions.txt  nontrivial_solutions.txt  solutions_for_10^12_range.txt  solutions_for_10^3_range.txt  solutions_for_10^4_range.txt  solutions_for_10^5_range.txt  solutions_for_10^6_range.txt  solutions_for_10^7_range.txt  solutions_for_10^8_range.txt  solutions_for_10^9_range.txt  solutions_for_negative_yz.txt  solutions_for_negative_z.txt  solutions_for_positive_xyz.txt  solutions_for_x_greater_10^10.txt  solutions_for_x_greater_10^11.txt  solutions_for_x_greater_10^12.txt  solutions_for_x_greater_10^3.txt  solutions_for_x_greater_10^4.txt  solutions_for_x_greater_10^5.txt  solutions_for_x_greater_10^7.txt  solutions_for_x_greater_10^8.txt  trivial_for_negative_numbers.txt  trivial_for_negative_xyz.txt  trivial_for_positive_numbers.txt  trivial_for_positive_xyz.txt  trivial_solutions.txt
